--- a/index.html
+++ b/index.html
@@ -3,16 +3,29 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>EduSync - Gestão Escolar</title>
+  <meta name="description" content="Sistema de Gestão Escolar Integrado">
+  <meta name="theme-color" content="#2563eb">
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <style>
-    body { font-family: 'Inter', sans-serif; background-color: #f8fafc; }
+    body { 
+      font-family: 'Inter', sans-serif; 
+      background-color: #f8fafc;
+      -webkit-tap-highlight-color: transparent;
+    }
     .custom-scrollbar::-webkit-scrollbar { width: 6px; height: 6px; }
     .custom-scrollbar::-webkit-scrollbar-track { background: #f1f1f1; }
     .custom-scrollbar::-webkit-scrollbar-thumb { background: #cbd5e1; border-radius: 10px; }
     .custom-scrollbar::-webkit-scrollbar-thumb:hover { background: #94a3b8; }
+    
+    /* Previne seleção de texto em botões no mobile */
+    button { user-select: none; }
+    
+    /* Animações suaves */
+    .animate-fade-in { animation: fadeIn 0.3s ease-out; }
+    @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
   </style>
 <script type="importmap">
 {
@@ -28,5 +41,7 @@
 </head>
 <body>
   <div id="root"></div>
+  <!-- O script type="module" é essencial para o funcionamento no GitHub Pages com ESM -->
+  <script type="module" src="./index.tsx"></script>
 </body>
 </html>
