--- a/index.html
+++ b/index.html
@@ -7,41 +7,53 @@
   <title>EduSync - Gestão Escolar</title>
   <meta name="description" content="Sistema de Gestão Escolar Integrado">
   <meta name="theme-color" content="#2563eb">
+  
+  <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
+  
+  <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  
   <style>
     body { 
       font-family: 'Inter', sans-serif; 
       background-color: #f8fafc;
       -webkit-tap-highlight-color: transparent;
+      overflow-x: hidden;
     }
     .custom-scrollbar::-webkit-scrollbar { width: 6px; height: 6px; }
     .custom-scrollbar::-webkit-scrollbar-track { background: #f1f1f1; }
     .custom-scrollbar::-webkit-scrollbar-thumb { background: #cbd5e1; border-radius: 10px; }
     .custom-scrollbar::-webkit-scrollbar-thumb:hover { background: #94a3b8; }
     
-    /* Previne seleção de texto em botões no mobile */
     button { user-select: none; }
     
-    /* Animações suaves */
     .animate-fade-in { animation: fadeIn 0.3s ease-out; }
     @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
+
+    /* Estilo para tabelas responsivas no mobile */
+    .table-container {
+      width: 100%;
+      overflow-x: auto;
+      -webkit-overflow-scrolling: touch;
+    }
   </style>
-<script type="importmap">
-{
-  "imports": {
-    "react/": "https://esm.sh/react@^19.2.4/",
-    "react": "https://esm.sh/react@^19.2.4",
-    "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
-    "recharts": "https://esm.sh/recharts@^3.7.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/"
+
+  <script type="importmap">
+  {
+    "imports": {
+      "react/": "https://esm.sh/react@^19.2.4/",
+      "react": "https://esm.sh/react@^19.2.4",
+      "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
+      "recharts": "https://esm.sh/recharts@^3.7.0",
+      "react-dom/": "https://esm.sh/react-dom@^19.2.4/"
+    }
   }
-}
-</script>
+  </script>
 </head>
 <body>
   <div id="root"></div>
-  <!-- O script type="module" é essencial para o funcionamento no GitHub Pages com ESM -->
+  <!-- O uso de ./ garante que o caminho seja relativo ao diretório atual, essencial para GitHub Pages -->
   <script type="module" src="./index.tsx"></script>
 </body>
 </html>
