--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
     .animate-fade-in { animation: fadeIn 0.3s ease-out; }
     @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
 
-    /* Estilo para tabelas responsivas no mobile */
     .table-container {
       width: 100%;
       overflow-x: auto;
@@ -40,20 +39,25 @@
   </style>
 
   <script type="importmap">
-  {
-    "imports": {
-      "react/": "https://esm.sh/react@^19.2.4/",
-      "react": "https://esm.sh/react@^19.2.4",
-      "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
-      "recharts": "https://esm.sh/recharts@^3.7.0",
-      "react-dom/": "https://esm.sh/react-dom@^19.2.4/"
-    }
+{
+  "imports": {
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "lucide-react": "https://esm.sh/lucide-react@0.463.0",
+    "recharts": "https://esm.sh/recharts@2.12.7",
+    "firebase/app": "https://esm.sh/firebase@10.13.2/app",
+    "firebase/firestore": "https://esm.sh/firebase@10.13.2/firestore",
+    "firebase/auth": "https://esm.sh/firebase@10.13.2/auth",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+    "react/": "https://esm.sh/react@^19.2.4/",
+    "firebase/": "https://esm.sh/firebase@^12.9.0/"
   }
-  </script>
+}
+</script>
 </head>
 <body>
   <div id="root"></div>
-  <!-- O uso de ./ garante que o caminho seja relativo ao diretório atual, essencial para GitHub Pages -->
   <script type="module" src="./index.tsx"></script>
 </body>
 </html>
